fix width for mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@ var viewer = OpenSeadragon({
 </div>
 
 {% endfor %}
-<h4><br>created by Mohit Nalavadi</h4>
+<div><h4><br>created by Mohit Nalavadi</h4></div>
 
 </body>
 </html>
