make renderer fit on differernt size windows

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Style the Open Sea Dragon Renderer */
 .renderer {
-    width: 1000px;
-    height: 600px;
+    width: 78vw;
+    height: 65vh;
 }
 
 /* Style the Tabs */
